[Mac] Display no icon for ZOOM_NORMAL state in zoom decoration.

In Material Design there is no icon displayed for the 100% zoom state.

BUG=599361

Review URL: https://codereview.chromium.org/1858823003

Cr-Commit-Position: refs/heads/master@{#385192}

Former-commit-id: 031da13459459a77f602577a8d7379597c82e182